crates/oxc_linter/src/snapshots/prefer_code_point.snap
---
source: crates/oxc_linter/src/tester.rs
snapshot_kind: text
---
  ⚠ eslint-plugin-unicorn(prefer-code-point): Prefer `codePointAt` over `charCodeAt`
   ╭─[prefer_code_point.tsx:1:8]
 1 │ string.charCodeAt(index)
   ·        ──────────
   ╰────
  help: Unicode is better supported in `codePointAt` than `charCodeAt`

  ⚠ eslint-plugin-unicorn(prefer-code-point): Prefer `codePointAt` over `charCodeAt`
   ╭─[prefer_code_point.tsx:1:17]
 1 │ (( (( string )).charCodeAt( ((index)), )))
   ·                 ──────────
   ╰────
  help: Unicode is better supported in `codePointAt` than `charCodeAt`

  ⚠ eslint-plugin-unicorn(prefer-code-point): Prefer `fromCodePoint` over `fromCharCode`
   ╭─[prefer_code_point.tsx:1:8]
 1 │ String.fromCharCode( code )
   ·        ────────────
   ╰────
  help: Unicode is better supported in `fromCodePoint` than `fromCharCode`

  ⚠ eslint-plugin-unicorn(prefer-code-point): Prefer `fromCodePoint` over `fromCharCode`
   ╭─[prefer_code_point.tsx:1:17]
 1 │ (( (( String )).fromCharCode( ((code)), ) ))
   ·                 ────────────
   ╰────
  help: Unicode is better supported in `fromCodePoint` than `fromCharCode`
