crates/oxc_linter/src/snapshots/prefer_dom_node_dataset.snap
---
source: crates/oxc_linter/src/tester.rs
expression: prefer_dom_node_dataset
---
  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-unicorn', '🦄');
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-🦄', '🦄');
   ·                      ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-ゆ', 'ゆ');
   ·                      ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-foo2', '🦄');
   ·                      ───────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-foo:bar', 'zaz');
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute("data-foo:bar", "zaz");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-foo.bar', 'zaz');
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-foo-bar', 'zaz');
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute('data-foo', /* comment */ 'bar');
   ·                      ──────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.querySelector('#selector').setAttribute('data-AllowAccess', true);
   ·                                                 ──────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute("data-", "🦄");
   ·                      ───────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute("data--foo", "🦄");
   ·                      ───────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute("DATA--FOO", "🦄");
   ·                      ───────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute("DATA- ", "🦄");
   ·                      ────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.setAttribute("DATA-Foo-bar", "🦄");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ optional?.element.setAttribute("data-unicorn", "🦄");
   ·                                ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `setAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ console.log(element.setAttribute("data-unicorn", "🦄"))
   ·                                  ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute('data-unicorn');
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-unicorn");
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-unicorn",);
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-🦄");
   ·                         ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-ゆ");
   ·                         ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-foo2");
   ·                         ───────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-foo:bar");
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-foo:bar");
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-foo.bar");
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-foo-bar");
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-foo");
   ·                         ──────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.querySelector("#selector").removeAttribute("data-AllowAccess");
   ·                                                    ──────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-");
   ·                         ───────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ optional?.element.removeAttribute("data-unicorn");
   ·                                   ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `removeAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.removeAttribute("data-unicorn")?.property
   ·                         ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute('data-unicorn');
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-unicorn");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-unicorn",);
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-🦄");
   ·                      ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-ゆ");
   ·                      ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-foo2");
   ·                      ───────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-foo:bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-foo:bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-foo.bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-foo-bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-foo");
   ·                      ──────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.querySelector("#selector").hasAttribute("data-AllowAccess");
   ·                                                 ──────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ optional?.element.hasAttribute("data-unicorn");
   ·                                ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `hasAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.hasAttribute("data-unicorn").toString()
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute('data-unicorn');
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-unicorn");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-unicorn",);
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-🦄");
   ·                      ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-ゆ");
   ·                      ─────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-foo2");
   ·                      ───────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-foo:bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-foo:bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-foo.bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-foo-bar");
   ·                      ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-foo");
   ·                      ──────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.querySelector("#selector").getAttribute("data-AllowAccess");
   ·                                                 ──────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ optional?.element.getAttribute("data-unicorn");
   ·                                ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-dom-node-dataset): Prefer using `dataset` over `getAttribute`
   ╭─[prefer_dom_node_dataset.tsx:1:1]
 1 │ element.getAttribute("data-unicorn").toString()
   ·                      ──────────────
   ╰────


