crates/oxc_linter/src/snapshots/prefer_dom_node_text_content.snap
---
source: crates/oxc_linter/src/tester.rs
expression: prefer_dom_node_text_content
---
  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:6]
 1 │ node.innerText;
   ·      ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:7]
 1 │ node?.innerText;
   ·       ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:6]
 1 │ node.innerText = 'foo';
   ·      ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:11]
 1 │ innerText.innerText;
   ·           ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:8]
 1 │ const {innerText} = node;
   ·        ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:8]
 1 │ const {innerText,} = node;
   ·        ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:8]
 1 │ const {innerText: text} = node;
   ·        ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:8]
 1 │ const {innerText = "default text"} = node;
   ·        ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:8]
 1 │ const {innerText: text = "default text"} = node;
   ·        ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:3]
 1 │ ({innerText} = node);
   ·   ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:3]
 1 │ ({innerText: text} = node);
   ·   ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:3]
 1 │ ({innerText = "default text"} = node);
   ·   ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:3]
 1 │ ({innerText: text = "default text"} = node);
   ·   ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:15]
 1 │ function foo({innerText}) {return innerText}
   ·               ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.

  ⚠ eslint-plugin-unicorn(prefer-dom-node-text-content): Prefer `.textContent` over `.innerText`.
   ╭─[prefer_dom_node_text_content.tsx:1:14]
 1 │ for (const [{innerText}] of elements);
   ·              ─────────
   ╰────
  help: Replace `.innerText` with `.textContent`.
