crates/oxc_linter/src/snapshots/prefer_es_6_class.snap
---
source: crates/oxc_linter/src/tester.rs
---
  ⚠ eslint-plugin-react(prefer-es6-class): Components should use es6 class instead of createClass.
   ╭─[prefer_es_6_class.tsx:2:25]
 1 │ 
 2 │             var Hello = createReactClass({
   ·                         ────────────────
 3 │               displayName: 'Hello',
   ╰────

  ⚠ eslint-plugin-react(prefer-es6-class): Components should use es6 class instead of createClass.
   ╭─[prefer_es_6_class.tsx:2:25]
 1 │ 
 2 │             var Hello = createReactClass({
   ·                         ────────────────
 3 │               render: function() {
   ╰────

  ⚠ eslint-plugin-react(prefer-es6-class): Components should use createClass instead of ES6 class.
   ╭─[prefer_es_6_class.tsx:2:19]
 1 │ 
 2 │             class Hello extends React.Component {
   ·                   ─────
 3 │               render() {
   ╰────
