crates/oxc_linter/src/snapshots/prefer_expect_resolves.snap
---
source: crates/oxc_linter/src/tester.rs
assertion_line: 151
expression: prefer_expect_resolves
---
  ⚠ eslint-plugin-jest(prefer-expect-resolves): Prefer `await expect(...).resolves` over `expect(await ...)` syntax.
   ╭─[prefer_expect_resolves.tsx:3:28]
 2 │                 it('passes', async () => {
 3 │                     expect(await someValue(),).toBe(true);
   ·                            ─────────────────
 4 │                 });
   ╰────
  help: Use `await expect(...).resolves` instead

  ⚠ eslint-plugin-jest(prefer-expect-resolves): Prefer `await expect(...).resolves` over `expect(await ...)` syntax.
   ╭─[prefer_expect_resolves.tsx:4:28]
 3 │                     const myPromise = Promise.resolve(true);
 4 │                     expect(await myPromise).toBe(true);
   ·                            ───────────────
 5 │                 });
   ╰────
  help: Use `await expect(...).resolves` instead

  ⚠ eslint-plugin-jest(prefer-expect-resolves): Prefer `await expect(...).resolves` over `expect(await ...)` syntax.
   ╭─[prefer_expect_resolves.tsx:6:34]
 5 │                     const myPromise = Promise.resolve(true);
 6 │                     pleaseExpect(await myPromise).toBe(true);
   ·                                  ───────────────
 7 │                 });
   ╰────
  help: Use `await expect(...).resolves` instead
