crates/oxc_linter/src/snapshots/prefer_exponentiation_operator.snap
---
source: crates/oxc_linter/src/tester.rs
expression: prefer_exponentiation_operator
---
  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ globalThis.Math.pow(a, b)
   · ─────────────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ globalThis.Math['pow'](a, b)
   · ────────────────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ Math.pow(a, b) + Math.pow(c,
   · ──────────────
 2 │              d)
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:18]
 1 │ ╭─▶ Math.pow(a, b) + Math.pow(c,
 2 │ ╰─▶              d)
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ Math.pow(Math.pow(a, b), Math.pow(c, d))
   · ────────────────────────────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:10]
 1 │ Math.pow(Math.pow(a, b), Math.pow(c, d))
   ·          ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:26]
 1 │ Math.pow(Math.pow(a, b), Math.pow(c, d))
   ·                          ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ Math.pow(a, b)**Math.pow(c, d)
   · ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:17]
 1 │ Math.pow(a, b)**Math.pow(c, d)
   ·                 ──────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ Math.pow(a, b as any)
   · ─────────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ Math.pow(a as any, b)
   · ─────────────────────
   ╰────

  ⚠ eslint-plugin-unicorn(prefer-exponentian-operator): Prefer `**` over `Math.pow`.
   ╭─[prefer_exponentiation_operator.tsx:1:1]
 1 │ Math.pow(a, b) as any
   · ──────────────
   ╰────
